<resources>
    <string name="app_name">NFC encode</string>

    // INFO RECYCLE
    <string name="dialog_scan_nfc">Tap the phone on the NFC tag to write the message.</string>


    // MENU ITEMS NAVIGATION
    <string name="menu_item_read">Decrypt data</string>
    <string name="menu_item_write">Encrypt data </string>
    <string name="menu_item_encode">Protect tags</string>
    <string name="menu_item_decode">Settings</string>
    <string name="menu_item_settings">About app</string>

    //WRITE ACTIVITY
    <string name="write_editText_hint">Your message</string>
    <string name="write_password_hint">Your password</string>
    <string name="dialog_write_message">Tap the NFC tag to write the message</string>
    <string name="message_size">Message size: </string>
    <string name="message_size_bytes">bytes</string>
    <string name="write_text">Enter your message</string>
    <string name="write_password">Enter your password</string>
    <string name="btn_write">Encode data</string>
    <string name="password_text">Password: </string>
    <string name="encoded_message_text">Encoded message </string>
    <string name="decoded_message_text">Decoded message </string>
    <string name="button_decode">Decode data</string>
    <string name="algorithm_selected">Protection type: </string>
    <string name="algorithm_type">Cipher algorithm </string>

    <string name="password_small">Password problem</string>
    <string name="password_small_sub">Using the cipher algorithm, your password can\'t be the same size or smaller as the message.</string>

    //OTHER
    <string name="nfc" translatable="false">NFC</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="close">Close</string>

    <!--<string name="nfc">NFC \u0020 </string> -->

    //READ ACTIVITY
    <string name="dialog_tap_tag">Tap the NFC tag</string>
    <string name="dialog_tap_tag_write_sub">This action will save the encoded message on the tag.</string>
    <string name="dialog_tap_tag_sub">It wont explode. I hope.</string>
    <string name="dialog_success_write">Write completed!</string>
    <string name="dialog_error_write">Write Error!</string>
    <string name="dialog_error_write_sub">Write Error!</string>
    <string name="tag_info">Tag info</string>
    <string name="wrong_pw">Wrong password.</string>
    <string name="no_algorithm">No algorithm detected.</string>
    <string name="content_no_encoding">Content of NFC tag</string>
    <string name="blank">This tag has no saved data.</string>

    //PROTECT ACTIVITY

    <string name="lock_tag_text">Lock tag</string>
    <string name="other_text">Other options</string>
    <string name="goto_play_store">Open Play Store</string>

    <string name="dialog_other_options_title">Other protection options</string>
    <string name="dialog_other_options_sub"> For other NFC tag protection options (password) I would recommend you to use the app NFC Tools.\n\n</string>

    <string name="dialog_read_only_title_info">Lock tag info</string>

    <string name="dialog_read_only_sub"> Tap the tag to lock it permanently.\n\n</string>

    <string name="dialog_read_only_title">Lock tag</string>
    <string name="dialog_read_only_sub_info">This process will lock the tag permanently! You can still read data from it, but nothing else. Be careful with this option.
        \n\n Should work on most NFC tags.</string>

    <string name="dialog_set_pw_title">Set password</string>
    <string name="dialog_set_pw_sub">By setting a password only the person that knows the password can write to the tag.
        \n\n This only works on the NFC tag:\n NXP-NTAG213</string>

    <string name="dialog_remove_pw_title">Remove password</string>
    <string name="dialog_remove_pw_sub">By removing the password, you can write to the tag again.
        \n\n This only works on the NFC tag:\n NXP-NTAG213</string>

    <string name="toast_text_select_protection_type">Please select an option.</string>

    <string name="dialog_success_readOnly">Tag is read only now!</string>
    <string name="dialog_error_readOnly">Error making tag read only!</string>

    //ABOUT ACTIVITY
    <string name="about_app_title">About the application</string>
    <string name="about_app_description">The app is mean to save private data like usernames, passwords, PIN numbers and other sensitive
    informations on a NFC tag.\n\nYou can take a standard NFC tag like the NXP-NTAG213 and use the tag to save your passwords on your desk.
        Only you can read the data on the tag. You can stick a tag to your wallet and save your PIN numbers and other info on it. If the wallet
        gets stolen, nobody but you can read the encoded data on the tag.
    </string>
    <string name="developer_title">Development</string>
    <string name="developer_description">Hello, I made this app because I wanted to store my password safely on my desk. But primarily because
    I ordered 100+ NFC tags and I had no idea what to do with them.</string>
    <string name="donation">If you like the app you can buy me a coffee or not.</string>


    //SETTINGS ACTIVITY
    <string name="cipher_algo">Cipher algorithm</string>
    <string name="encrypt_algo">Encryption algorithm</string>
    <string name="type_of_protection">Selected algorithm type</string>


    <string name="dialog_cipher_info_title">Cipher algorithm info</string>
    <string name="dialog_cipher_sub_info">This algorithm encodes your message with a cipher algorithm. \n The encoded message is the same size as the original, so you can store a longer message on the NFC tag.
    \n \n The message can be deciphered with any device that uses this app, you only need to know the password. You can use the same password on multiple NFC tags.
        \n You can encode ASCII values from 32-126. If you use a character that is outside this range lets say a new line (ASCII value 10) it will encode a random value instead.
        \n \n The algorithm is not nearly as safe as the encryption type, but it gets the job done.
    </string>

    <string name="dialog_ecrypt_info_title">Encryption algorithm info</string>
    <string name="dialog_ecrypt_sub_info">This algorithm will encrypt your message with a very strong AES algorithm. \n The encrypted message will be approximately 3x the size of the original one.
    \n \n The message can only be read with the same mobile device it was created with and a unique password. \n \n If you use the same password twice for two different NFC tags, you will not be able to decrypt the
            the message that was encoded with the same password first. Also, if you delete tha app you will not be able to decode the messages.
        \n \n There is no chance that someone could crack this encoded message. In fact there is a big chance that at some point even you will not be able to decode it, if you are not careful.
    </string>

</resources>