<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/jet">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:background="@drawable/bg_button_circle_blackish"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/spacing_12"
        android:padding="@dimen/spacing_12"
        />

    <TextView
        android:id="@+id/tv_algorithm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/algorithm_selected"
        android:textColor="@color/white"
        android:layout_marginEnd="@dimen/spacing_6"
        app:layout_constraintBottom_toBottomOf="@+id/tv_algorithm_type"
        app:layout_constraintEnd_toStartOf="@+id/tv_algorithm_type" />

    <TextView
        android:id="@+id/tv_algorithm_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/algorithm_type"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/spacing_4"
        app:layout_constraintBottom_toTopOf="@+id/clTagInfo"
        app:layout_constraintEnd_toEndOf="@+id/clTagInfo" />

     <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTagInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_14"
        android:layout_marginEnd="@dimen/spacing_14"
         android:layout_marginBottom="@dimen/spacing_56"
        android:background="@drawable/bg_white_with_blue_border_rounded_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--

        <TextView
            android:id="@+id/tvMessageSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_4"
            android:text="@string/message_size"
            app:layout_constraintBottom_toTopOf="@+id/vDivider"
            app:layout_constraintEnd_toStartOf="@+id/tvMessageSizeData" />

        <TextView
            android:id="@+id/tvMessageSizeData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_4"
            android:text="7"
            app:layout_constraintBottom_toTopOf="@+id/vDivider"
            app:layout_constraintEnd_toStartOf="@+id/tvMessageBytes" />

        <TextView
            android:id="@+id/tvMessageBytes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_size_bytes"
            app:layout_constraintBottom_toTopOf="@+id/vDivider"
            app:layout_constraintEnd_toEndOf="@+id/vDivider" />

        <View
            android:id="@+id/vDivider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/spacing_32"
            android:layout_marginEnd="@dimen/spacing_32"
            android:layout_marginBottom="@dimen/spacing_8"
            android:background="@color/grey20"
            app:layout_constraintBottom_toTopOf="@+id/tv_write_data_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" /> -->

        <TextView
            android:id="@+id/tv_write_data_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/independance"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_marginTop="@dimen/spacing_12"
            android:text="@string/write_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/etMessage"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/spacing_32"
            android:layout_marginTop="@dimen/spacing_16"
            android:layout_marginEnd="@dimen/spacing_32"
            android:background="@drawable/bg_edit_text"
            android:gravity="top"
            android:hint="@string/write_editText_hint"
            android:inputType="textMultiLine|textCapSentences"
            android:padding="@dimen/spacing_16"
            android:textColor="@color/black"
            android:textColorHint="@color/grey20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/tv_write_data_title"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tvWritePasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/independance"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_marginTop="@dimen/spacing_20"
            android:text="@string/password_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMessage" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tilPassword"
             android:layout_width="0dp"
             android:layout_height="66dp"
             android:layout_marginBottom="@dimen/spacing_12"
             android:layout_marginTop="@dimen/spacing_6"
             android:layout_marginEnd="@dimen/spacing_56"
             app:endIconMode="password_toggle"
             app:boxBackgroundColor="@color/independance"
             app:boxStrokeColor="@color/independance"
             app:boxBackgroundMode="outline"
             app:layout_constraintBottom_toBottomOf="@+id/tvWritePasswordTitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tvWritePasswordTitle"
             app:layout_constraintTop_toTopOf="@+id/tvWritePasswordTitle"
             style="@style/CustomTextInputLayout">

             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etPassword"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/independance"
                 android:inputType="textPassword"
                 android:nextFocusDown="@id/tilPassword"
                 android:outlineSpotShadowColor="@color/jet"
                 android:textColor="@color/independance"
                 app:hintTextColor="@color/roman_silver" />

         </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:layout_marginBottom="@dimen/spacing_16"
            android:clickable="true"
            android:paddingStart="@dimen/spacing_6"
            android:paddingEnd="@dimen/spacing_6"
            android:background="@drawable/bg_blue_rounded_12"
            android:text="@string/btn_write"
            android:textColor="@color/white"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

     </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
